// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render shift edit form in disabled state 1`] = `
<form
  className="DutyShiftEdit"
  onSubmit={[MockFunction]}
>
  <ta-title
    font="s"
    level={2}
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "title",
      }
    }
    size="s"
  >
    i18n:title
  </ta-title>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <div
    className="DutyShiftEdit-LabelsRow"
  >
    <div
      className="DutyShiftEdit-PersonLabel"
    >
      i18n:person-label
    </div>
    <div
      className="DutyShiftEdit-Label"
    >
      i18n:dates-label
    </div>
  </div>
  <PersonRow
    end={2010-02-04T21:00:00.000Z}
    name="person-0"
    onPersonChange={[Function]}
    start={2019-01-31T21:00:00.000Z}
  />
  <div
    className="DutyShiftEdit-Absences"
  />
  <button2
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "add-replace-button",
      }
    }
    onClick={[Function]}
    size="s"
    tabIndex={0}
    text="i18n:add-replacement-button"
    theme="clear"
    view="default"
  />
  <Footer
    disabled={true}
    onCancel={[Function]}
  />
</form>
`;

exports[`Should render shift edit form in loading state 1`] = `
<form
  className="DutyShiftEdit"
  onSubmit={[MockFunction]}
>
  <ta-title
    font="s"
    level={2}
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "title",
      }
    }
    size="s"
  >
    i18n:title
  </ta-title>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <div
    className="DutyShiftEdit-LabelsRow"
  >
    <div
      className="DutyShiftEdit-PersonLabel"
    >
      i18n:person-label
    </div>
    <div
      className="DutyShiftEdit-Label"
    >
      i18n:dates-label
    </div>
  </div>
  <PersonRow
    end={2010-02-04T21:00:00.000Z}
    name="person-0"
    onPersonChange={[Function]}
    start={2019-01-31T21:00:00.000Z}
  />
  <div
    className="DutyShiftEdit-Absences"
  />
  <button2
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "add-replace-button",
      }
    }
    onClick={[Function]}
    size="s"
    tabIndex={0}
    text="i18n:add-replacement-button"
    theme="clear"
    view="default"
  />
  <Footer
    disabled={true}
    onCancel={[Function]}
  />
</form>
`;

exports[`Should render shift edit form with absences 1`] = `
<form
  className="DutyShiftEdit"
  onSubmit={[MockFunction]}
>
  <ta-title
    font="s"
    level={2}
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "title",
      }
    }
    size="s"
  >
    i18n:title
  </ta-title>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <div
    className="DutyShiftEdit-LabelsRow"
  >
    <div
      className="DutyShiftEdit-PersonLabel"
    >
      i18n:person-label
    </div>
    <div
      className="DutyShiftEdit-Label"
    >
      i18n:dates-label
    </div>
  </div>
  <PersonRow
    end={2010-02-04T21:00:00.000Z}
    name="person-0"
    onPersonChange={[Function]}
    start={2019-01-31T21:00:00.000Z}
  />
  <div
    className="DutyShiftEdit-Absences"
  >
    <abc-gap
      from={"2019-02-01T00:00:00.000+03:00"}
      fullDay={true}
      key="absence-1"
      to={"2019-02-10T00:00:00.000+03:00"}
      type="vacation"
      workInAbsence={false}
    />
  </div>
  <button2
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "add-replace-button",
      }
    }
    onClick={[Function]}
    size="s"
    tabIndex={0}
    text="i18n:add-replacement-button"
    theme="clear"
    view="default"
  />
  <Footer
    onCancel={[Function]}
  />
</form>
`;

exports[`Should render shift edit form with messages about dutyOnHolidays && dutyOnWeekends 1`] = `
<form
  className="DutyShiftEdit"
  onSubmit={[MockFunction]}
>
  <ta-title
    font="s"
    level={2}
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "title",
      }
    }
    size="s"
  >
    i18n:title
  </ta-title>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <div
    className="DutyShiftEdit-LabelsRow"
  >
    <div
      className="DutyShiftEdit-PersonLabel"
    >
      i18n:person-label
    </div>
    <div
      className="DutyShiftEdit-Label"
    >
      i18n:dates-label
    </div>
  </div>
  <PersonRow
    end={2010-02-04T21:00:00.000Z}
    name="person-0"
    onPersonChange={[Function]}
    start={2019-01-31T21:00:00.000Z}
  />
  <div
    className="DutyShiftEdit-Absences"
  />
  <button2
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "add-replace-button",
      }
    }
    onClick={[Function]}
    size="s"
    tabIndex={0}
    text="i18n:add-replacement-button"
    theme="clear"
    view="default"
  />
  <Footer
    onCancel={[Function]}
  />
</form>
`;

exports[`Should render shift edit form with replaces 1`] = `
<form
  className="DutyShiftEdit"
  onSubmit={[MockFunction]}
>
  <ta-title
    font="s"
    level={2}
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "title",
      }
    }
    size="s"
  >
    i18n:title
  </ta-title>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <div
    className="DutyShiftEdit-LabelsRow"
  >
    <div
      className="DutyShiftEdit-PersonLabel"
    >
      i18n:person-label
    </div>
    <div
      className="DutyShiftEdit-Label"
    >
      i18n:dates-label
    </div>
  </div>
  <PersonRow
    end={2010-02-04T21:00:00.000Z}
    name="person-0"
    onPersonChange={[Function]}
    start={2019-01-31T21:00:00.000Z}
  />
  <div
    className="DutyShiftEdit-Absences"
  />
  <div
    className="DutyShiftEdit-LabelsRow"
  >
    <div
      className="DutyShiftEdit-PersonLabel"
    >
      i18n:replacement-person-label
    </div>
    <div
      className="DutyShiftEdit-Label"
    >
      i18n:dates-label
    </div>
  </div>
  <div
    className="DutyShiftEdit-Replaces"
  >
    <PersonRow
      canDelete={true}
      canEditDates={true}
      end={2019-02-09T21:00:00.000Z}
      key="replace-101"
      name="replace-101"
      onDelete={[Function]}
      onEndChange={[Function]}
      onPersonChange={[Function]}
      onStartChange={[Function]}
      personId={201}
      shiftEnd={2010-02-04T21:00:00.000Z}
      shiftStart={2019-01-31T21:00:00.000Z}
      start={2019-01-31T21:00:00.000Z}
    />
  </div>
  <button2
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "add-replace-button",
      }
    }
    onClick={[Function]}
    size="s"
    tabIndex={0}
    text="i18n:add-replacement-button"
    theme="clear"
    view="default"
  />
  <Footer
    onCancel={[Function]}
  />
</form>
`;

exports[`Should render shift edit form without person 1`] = `
<form
  className="DutyShiftEdit"
  onSubmit={[MockFunction]}
>
  <ta-title
    font="s"
    level={2}
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "title",
      }
    }
    size="s"
  >
    i18n:title
  </ta-title>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-holidays-message
  </abc-text>
  <abc-text
    className="DutyShiftEdit-InfoMessage"
    muted="yes"
  >
    i18n:no-duty-on-weekends-message
  </abc-text>
  <div
    className="DutyShiftEdit-LabelsRow"
  >
    <div
      className="DutyShiftEdit-PersonLabel"
    >
      i18n:person-label
    </div>
    <div
      className="DutyShiftEdit-Label"
    >
      i18n:dates-label
    </div>
  </div>
  <PersonRow
    end={2010-02-04T21:00:00.000Z}
    name="person-0"
    onPersonChange={[Function]}
    start={2019-01-31T21:00:00.000Z}
  />
  <div
    className="DutyShiftEdit-Absences"
  />
  <button2
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "add-replace-button",
      }
    }
    onClick={[Function]}
    size="s"
    tabIndex={0}
    text="i18n:add-replacement-button"
    theme="clear"
    view="default"
  />
  <Footer
    onCancel={[Function]}
  />
</form>
`;
